--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Spotify Streamer</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="artist_name_placeholder">Artist Name</string>
+    <string name="content_description_artist_imageview">Artist ImageView</string>
+    <string name="album_name_placeholder">Album Name</string>
+    <string name="track_name_placeholder">Track Name</string>
+    <string name="title_activity_top_ten_tracks">Top 10 Tracks</string>
+    <string name="edittext_hint_enter_artist_name">Enter artist name.</string>
 </resources>
