--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Spotify Streamer</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="artist_name_placeholder">Artist Name</string>
     <string name="content_description_artist_imageview">Artist ImageView</string>
@@ -8,4 +7,7 @@
     <string name="track_name_placeholder">Track Name</string>
     <string name="title_activity_top_ten_tracks">Top 10 Tracks</string>
     <string name="edittext_hint_enter_artist_name">Enter artist name.</string>
+    <string name="toast_message_unable_to_reach_spotify">Unable to reach Spotify. Please try again.</string>
+    <string name="toast_message_unable_to_locate_artist">Unable to locate specified artist.\nVerify spelling or try different a name.</string>
+    <string name="toast_message_unable_to_find_top_ten_tracks">Unable to find the Top Ten Tracks. Please try again</string>
 </resources>
